fixed button spacing

--- a/src/main.css
+++ b/src/main.css
@@ -40,10 +40,10 @@ button:not(:last-child) {
 
 @media only screen and (max-width: 600px) {
     .main-box {
-        height: 85%;
+        height: 65%;
     }
     .random-question {
-        height: 25rem;
+        height: 15rem;
     }
     button {
         margin: 10px 0;
